Bug 82584 - MediaStream API: Adding two missing release() calls to PeerConnection00.cpp
Summary: MediaStream API: Adding two missing release() calls to PeerConnection00.cpp
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Tommy Widenflycht
URL:
Keywords:
Depends on:
Blocks: 80589
  Show dependency treegraph
 
Reported: 2012-03-29 01:54 PDT by Tommy Widenflycht
Modified: 2012-03-29 03:06 PDT (History)
2 users (show)

See Also:


Attachments
Patch (1.85 KB, patch)
2012-03-29 02:03 PDT, Tommy Widenflycht
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tommy Widenflycht 2012-03-29 01:54:32 PDT
By doing this I address two outstanding review comments on bug 81657.
Comment 1 Tommy Widenflycht 2012-03-29 02:03:28 PDT
Created attachment 134529 [details]
Patch
Comment 2 WebKit Review Bot 2012-03-29 03:06:30 PDT
Comment on attachment 134529 [details]
Patch

Clearing flags on attachment: 134529

Committed r112513: <http://trac.webkit.org/changeset/112513>
Comment 3 WebKit Review Bot 2012-03-29 03:06:35 PDT
All reviewed patches have been landed.  Closing bug.